--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -20,8 +20,7 @@
 		
 
 		<!--侧滑-->
-		<script src="../../js/main/slide_navigation.js">
-		</script>
+		<script type="text/javascript" src="../../js/main/slide_navigation.js"></script>
 		<script>
 			var datasource;
 		</script>
@@ -38,7 +37,7 @@
 			
 			.mui-segmented-control .mui-control-item {
 				/*行高*/
-				line-height: 20px;
+				line-height: 30px;
 				/*字体颜色*/
 				color: black;
 				/*中间竖线颜色*/
@@ -65,6 +64,7 @@
 	</head>
 
 	<body>
+		<h1>test</h1>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--第一个列表-->
@@ -107,9 +107,11 @@
 					<img style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
 					<span  class="parent">家长圈</span>
 					<!--<hr class="vertical-line" />-->
-					<div style="padding: 10px 10px 10px 100px;margin-top: -35px;">
+					<div style="padding-left: 80px;padding-bottom: 20px; margin-top: -35px;">
 
-				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
+				<div  class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-primary">
+					<div id="segmentedControl" class="mui-scroll">
+						</div>
 
 					<!--<a class="mui-control-item mui-active" href="#item1">
 				1001班<span class="mui-badge mui-badge-danger custom-badge1"  >3</span>
@@ -122,7 +124,7 @@
 			</div>
 				</h4>
 				<!--第二个列表-->
-				<div id="userList" style="margin-top: 0px;">
+				<div id="userList" style="margin-top: -20px;">
 					<!--<div id="item1" class="mui-control-content mui-active">
 
 						<ul class="mui-table-view parent-table1">
