--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -120,7 +120,7 @@
 					events.openNewWindow('mine/account-info.html')
 				})
 				mui('.mui-table-view').on('tap','.mui-table-view-cell',function(){
-					console.log('click position:'+this.getAttribute('position'))
+					closeMenu();
 					switch(parseInt(this.getAttribute('position'))){
 						//群
 						case 0:
@@ -146,6 +146,7 @@
 						break;
 						//关于
 						case 7:
+						events.openNewWindow('mine/group-info.html')
 						break;
 						default:
 						break;
