群信息修改

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -27,7 +27,7 @@
 		                       </div>
 		                   </a>
 		               </li>
-		               <li class="mui-table-view-cell" pos='0'>
+		               <li class="mui-table-view-cell open-newPage" pos='0'>
 		                   <a href="javascript:;">
 		          			<p class="mui-pull-right" id='nick'>暂无</p> 
 		                       <div class="mui-media-body">
@@ -54,7 +54,7 @@
 		                       </div>
 		                   </a>
 		               </li>
-		               <li class="mui-table-view-cell mui-media" pos='1'>
+		               <li class="mui-table-view-cell mui-media open-newPage" pos='1'>
 		                   <a href="javascript:;">
 		                      <p class="mui-pull-right" id='phone'>暂无</p> 
 		                       <div class="mui-media-body">
@@ -63,7 +63,7 @@
 		                       </div>
 		                   </a>
 		               </li>
-		                 <li class="mui-table-view-cell mui-media" pos='2'>
+		                 <li class="mui-table-view-cell mui-media open-newPage" pos='2'>
 		                   <a href="javascript:;">
 		                      <p class='mui-pull-right' id="txt">暂无</p>
 		                       <div class="mui-media-body">
