--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -31,6 +31,7 @@
 
 			    </div>
 			</div>
+			<img src="../../image/homework/other.png" />
 	    </div>
 		<!--下拉刷新容器-->
 		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
@@ -84,7 +85,7 @@
 							+'<div>'
 								+cell.imgs
 							+'</div>'
-							+'<p>已上传试卷人数('+cell.stuWorkNo+')</p>'
+							+'<p>已上传试卷人数('+cell.stuWorkN o+')</p>'
 						+'</div>'	
 			}
 		</script>
