--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -12,12 +12,6 @@
 		<link rel="stylesheet" href="../css/iconfont/iconfont.css" />
 
 		<style type="text/css">
-			body,
-			.mui-content {
-				background-color: #333;
-				color: #fff;
-			}
-
 			.title {
 				margin: 35px 15px 10px;
 			}
@@ -38,13 +32,18 @@
 
 	<body>
 		<div class="mui-content">
-
-			<div id="title" class="title" style="margin-bottom: 25px; text-align: center;">
-				<img id="uimg" src="../image/slide_navigation/img3.jpg" class="head-portrait" /><br />
-				<h4 id="uname">姓名</h4>
-				<sub id="utext">暂无信息</sub>
-			</div>
-			<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted" style="color: #ddd;">
+			<ul class="mui-table-view">
+			    <li id="title" class="mui-table-view-cell mui-media">
+			        <a href="javascript:;">
+			            <img id="uimg" class="mui-media-object mui-pull-left" src="../image/slide_navigation/img3.jpg">
+			            <div class="mui-media-body">
+			               <h4 id="uname">姓名</h4>
+			               <p id="utext">暂无信息</p>
+			            </div>
+			        </a>
+			    </li>
+			</ul>
+			<ul class="mui-table-view mui-table-view-chevron" >
 				<li class="mui-table-view-cell" position='0'>
 					<a class="mui-navigate-right" open-type="common">
 						<span class="mui-icon iconfont icon-qun app-icon"></span> 群
@@ -60,6 +59,8 @@
 						<span class="mui-icon iconfont icon-ruqun record-icon"></span> 申请加入群
 					</a>
 				</li>
+			</ul>
+			<ul class="mui-table-view mui-table-view-chevron ">
 				<li class="mui-table-view-cell" position='3'>
 					<a class="mui-navigate-right">
 						<span class="mui-icon iconfont icon-xinxiaoxi set-icon"></span> 新消息
@@ -76,6 +77,8 @@
 						<span class="mui-icon iconfont icon-kongjian about-icon"></span> 积分
 					</a>
 				</li>
+			</ul>
+			<ul class="mui-table-view mui-table-view-chevron" >
 				<li class="mui-table-view-cell" position='6'>
 					<a class="mui-navigate-right">
 						<span class="mui-icon iconfont icon-shezhi about-icon"></span> 设置
