--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -166,7 +166,7 @@
 				mui.init({
 					statusBarBackground: '#f7f7f7'
 				});
-				events.preLoad('register_phoneNumber.html');
+				events.preload('register_phoneNumber.html');
 				$.plusReady(function() {
 					plus.screen.lockOrientation("portrait-primary");
 					var settings = app.getSettings();
