--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -56,7 +56,7 @@
 //					console.log('fa song yanzhengma1211 flag=' + regFlag);
 				});
 //				console.log('fa song yanzhengma flag=' + regFlag);
-				events.preLoad('yanZhengMa.html');
+				events.preload('yanZhengMa.html');
 				events.addTap('register', function() {
 					//获取到手机号
 					var phoneNum = document.getElementById("phoneNumber");
