--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -12,6 +12,10 @@
 		<link rel="stylesheet" href="../css/iconfont/iconfont.css" />
 
 		<style type="text/css">
+			body,
+			.mui-content {
+			}
+
 			.title {
 				margin: 35px 15px 10px;
 			}
@@ -32,49 +36,46 @@
 
 	<body>
 		<div class="mui-content">
-			<ul class="mui-table-view">
-			    <li id="title" class="mui-table-view-cell mui-media">
-			        <a href="javascript:;">
-			            <img id="uimg" class="mui-media-object mui-pull-left" src="../image/slide_navigation/img3.jpg">
-			            <div class="mui-media-body">
-			               <h4 id="uname">姓名</h4>
-			               <p id="utext">暂无信息</p>
-			            </div>
-			        </a>
-			    </li>
-			</ul>
+			
+			<div id="title" class="title">
+				<img id="uimg" src="../image/slide_navigation/img3.jpg" class="head-portrait" /><br />
+				<h4 id="uname">姓名</h4>
+				<sub id="utext">暂无信息</sub>
+			</div>
+			
+			
 			<ul class="mui-table-view mui-table-view-chevron" >
 				<li class="mui-table-view-cell" position='0'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-qun app-icon"></span> 群
+						<span class="mui-icon iconfont icon-qunziliao app-icon"></span> 群资料
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='1'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-qun app-icon"></span> 群资料
+						<span class="mui-icon iconfont icon-group app-icon"></span> 群管理
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='2'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-ruqun record-icon"></span> 申请加入群
+						<span class="mui-icon iconfont icon-jiaqun record-icon"></span> 申请加入群
 					</a>
 				</li>
 			</ul>
 			<ul class="mui-table-view mui-table-view-chevron ">
 				<li class="mui-table-view-cell" position='3'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-xinxiaoxi set-icon"></span> 新消息
+						<span class="mui-icon iconfont icon-newmessage set-icon"></span> 新消息
 					</a>
 				</li>
 
 				<li class="mui-table-view-cell" position='4'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-kongjian about-icon"></span> 我的空间
+						<span class="mui-icon iconfont icon-zone about-icon"></span> 我的空间
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='5'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-kongjian about-icon"></span> 积分
+						<span class="mui-icon iconfont icon-jiaqun about-icon"></span> 积分
 					</a>
 				</li>
 			</ul>
@@ -146,6 +147,7 @@
 							break;
 							//设置
 						case 6:
+						events.openNewWindow('mine/setting.html')
 							break;
 							//关于
 						case 7:
