--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -224,19 +224,56 @@
 	</body>
 	<script>
 		mui.plusReady(function() {
-			//所需参数
-			var comData = {
-				vtp: 'inv', //获取项，要获取的项:inv(入群邀请),app(入群申请)
-			};
-
-			////返回值model：model_groupRequestUser
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			postDataPro_PostGrInv(comData, wd, function(data) {
-				wd.close();
-				console.log('17--postDataPro_PostGrInv:{RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + '}');
-			})
+			//12.邀请用户入群
+//		//需要参数
+//		var comData = {
+//			gid: '1',//群ID
+//			beinvutid:'1',//被邀请人ID
+//			beinvnick:'遥不可及',//被邀请人昵称
+//			mstype:'0',//被邀请人类型,0家长,2老师,3学生
+//			stat:'0',//入群状态,0待审,1同意
+//			lnkinfid:'0'//关联资料ID,无资料关联填写0
+//			urel:'',//与资料关系,与资料关系,一般申请加入家长的时候填写,如爸爸,妈妈,其他类型留空
+//			vtp:'1'//邀请类型,0老师邀请家长,1个人申请入群,2群员邀请群员
+//		};
+//		// 等待的对话框
+//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+//postDataPro_PostInvGuser(comData, wd, function(data) {
+//				wd.close();
+//				console.log('123');
+//				if(data.RspCode == 0) {
+//
+//				} else {
+//					mui.toast(data.RspTxt);
+//				}
+//			});
+//			var comData = {
+//				vvl: '15264122518' //查询的值
+//			};
+//			// 等待的对话框
+//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+//			//返回值model：model_userInfo
+//			postDataPro_PostUList(comData, wd, function(data) {
+//				wd.close();
+//				console.log('postDataPro_PostUList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+//				if(data.RspCode == 0) {
+//
+//				} else {
+//					mui.toast(data.RspTxt);
+//				}
+//			});
+			//			//所需参数
+			//			var comData = {
+			//				vtp: 'inv', //获取项，要获取的项:inv(入群邀请),app(入群申请)
+			//			};
+			//
+			//			////返回值model：model_groupRequestUser
+			//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			//			postDataPro_PostGrInv(comData, wd, function(data) {
+			//				wd.close();
+			//				console.log('17--postDataPro_PostGrInv:{RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + '}');
+			//			})
 		})
-
 
 		//		mui.init({
 		//			pullRefresh: {
