--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -67,13 +67,13 @@
 					<button type="button" class="mui-btn mui-btn-danger group-button">退群</button>
 
 				</div>
-				<div id="item2" class="mui-control-content mui-active">
+				<div id="item2" class="mui-control-content">
 					<!--这里放置真实显示的DOM内容-->
 					<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<button type="button" class="mui-btn mui-btn-danger group-button">退群</button>
 
 				</div>
-				<div id="item3" class="mui-control-content mui-active">
+				<div id="item3" class="mui-control-content">
 					<!--这里放置真实显示的DOM内容-->
 					<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<button type="button" class="mui-btn mui-btn-danger group-button">退群</button>
